--- a/task/index.html
+++ b/task/index.html
@@ -10,12 +10,26 @@
 
     <!-- <link rel="stylesheet" href="#" rel="icon"> -->
     <!-- Adding Bootstrap 5.1.3 -->
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
     <!-- Adding custom stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    
+    <!-- Header section -->
+    <header>
+
+    </header>
+    <!-- Main section -->
+    <main>
+
+    </main>
+
+    <div id="preloader"></div>
+
+   <!-- upload javascript files -->
+   <script src="vendors/jquery/jquery.min.js"></script>
+   <script src="vendors/bootstrap/bootstrap.min.js"></script>
+   <script src="js/script.js"></script>
 </body>
 </html>
