Created table in main section and header centered
Created table in main section - first its like template table.  header section now centered

--- a/task/index.html
+++ b/task/index.html
@@ -18,11 +18,39 @@
 <body>
     <!-- Header section -->
     <header>
-
+        <h1>Welcome To API Tasks From GeoNames WebServices</h1>
     </header>
     <!-- Main section -->
     <main>
-        <h1>Welcome</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>API name</th>
+                    <th>API description</th>
+                    <th>&nbsp;</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td scope="row">1. &lt;name&gt;</td>
+                    <td>&lt;description&gt;</td>
+                    <td><button type="button" class="btn btn-primary">Submit</button></td>
+                </tr>
+                <tr>
+                    <td scope="row">2. &lt;name&gt;</td>
+                    <td>&lt;description&gt;</td>
+                    <td><button type="button" class="btn btn-primary">Submit</button></td>
+                </tr>
+                <tr>
+                    <td scope="row">3. &lt;name&gt;</td>
+                    <td>&lt;description&gt;</td>
+                    <td><button type="button" class="btn btn-primary">Submit</button></td>
+                </tr>
+                <tr>
+                    <td class="result" colspan="3" scope="row"> Results</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
     <div id="preloader"></div>
