Fix some spelling and names in index.html
Fix some spelling and names in index.html : GeoNames Api -> API Tasks
weather->weather Observation

last row in table change class attribute to id, because we will be using jQuery to target id

--- a/task/index.html
+++ b/task/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Andrius Alimas">
-    <meta name="description" content="GeoNames API tasks">
+    <meta name="description" content="API Tasks">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Tasks</title>
 
@@ -32,7 +32,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="row">1. &lt;weather&gt;</td>
+                    <td scope="row">1. &lt;Weather Observation&gt;</td>
                     <td>&lt;description&gt;</td>
                     <td><button  id="weather_api" class="btn btn-primary">Submit</button></td>
                 </tr>
@@ -47,7 +47,7 @@
                     <td><button  class="btn btn-primary">Submit</button></td>
                 </tr>
                 <tr>
-                    <td class="result" colspan="3" scope="row"> Results</td>
+                    <td id="result" colspan="3" scope="row"> Results</td>
                 </tr>
             </tbody>
         </table>
