--- a/task/index.html
+++ b/task/index.html
@@ -22,7 +22,7 @@
     </header>
     <!-- Main section -->
     <main>
-        <table class="table">
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <th>API name</th>
@@ -32,8 +32,17 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="row">1. &lt;Weather Observation&gt;</td>
-                    <td>&lt;description&gt;</td>
+                    <td scope="row">1. Weather Observation </td>
+                    <td>Weather Station with most recent weather observation<hr>
+                        <p>
+                            <span class="important">Parameters: </span><br>
+                            Latitude, Longitude - the service will return the station closest to this given point (reverse geocoding) <br>
+                            radius - search radius, only weather stations within this radius are considered. Default is about 100km.<hr>
+                            <label for="lat">Latitude: </label><input id="lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" size="5"> 
+                            <label for="lng">Longitude: </label><input id="lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm">
+                            <label for="radius">Radius: </label><input id="radius" name="radius" type="number" placeholder="Radius" class="form-control input-group-sm">
+                        </p>
+                    </td>
                     <td><button  id="weather_api" class="btn btn-primary">Submit</button></td>
                 </tr>
                 <tr>
