in javascript file accepting data and error message
in javascript file accepting data and error message

--- a/task/index.html
+++ b/task/index.html
@@ -38,8 +38,8 @@
                             <span class="important">Parameters: </span><br>
                             Latitude, Longitude - the service will return the station closest to this given point (reverse geocoding) <br>
                             radius - search radius, only weather stations within this radius are considered. Default is about 100km.<hr>
-                            <label for="lat">Latitude: </label><input id="lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" size="5"> 
-                            <label for="lng">Longitude: </label><input id="lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm">
+                            <label for="lat">Latitude: </label><input id="lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" > 
+                            <label for="lng">Longitude: </label><input id="lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm" >
                             <label for="radius">Radius: </label><input id="radius" name="radius" type="number" placeholder="Radius" class="form-control input-group-sm">
                         </p>
                     </td>
