--- a/task/index.html
+++ b/task/index.html
@@ -37,10 +37,10 @@
                             Parameters: <br>
                             Latitude, Longitude - the service will return the station closest to this given point (reverse geocoding) <br>
                             Radius - search radius, only weather stations within this radius are considered. Default is about 100km.<hr>
-                            <label for="lat">Latitude: </label><input id="lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" > 
-                            <label for="lng">Longitude: </label><input id="lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm" >
-                            <label for="radius">Radius: </label><input id="radius" name="radius-w" type="number" placeholder="Radius" class="form-control input-group-sm"><hr>
-                            <label for="place">Place Name: </label><input list="places" id="place" name="place" type="text"  class="form-control input-group-sm">
+                                <label for="weather_lat">Latitude: </label><input id="weather_lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" > 
+                                <label for="weather_lng">Longitude: </label><input id="weather_lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm" >
+                                <label for="weather_radius">Radius: </label><input id="weather_radius" name="radius" type="number" placeholder="Radius" class="form-control input-group-sm"><hr>
+                                <label for="place">Place Name: </label><input list="places" id="place" name="place" type="text"  class="form-control input-group-sm">
 
                             <!-- data list that when you type will get some suggestions -->
                             <datalist id="places">
@@ -65,9 +65,9 @@
                         radius (buffer in km for closest timezone in coastal areas)<br>
                         country name<br>
                         date (date for sunrise/sunset)<hr>
-                            <label for="lat">Latitude: </label><input id="lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" > 
-                            <label for="lng">Longitude: </label><input id="lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm" >
-                            <label for="radius">Radius: </label><input id="radius" name="radius" type="number" placeholder="Radius" class="form-control input-group-sm"><hr>
+                            <label for="timezone_lat">Latitude: </label><input id="timezone_lat" name="lat"type="number" placeholder="Latitude" class="form-control input-group-sm" > 
+                            <label for="timezone_lng">Longitude: </label><input id="timezone_lng" name="lng" type="number" placeholder="Longitude" class="form-control input-group-sm" >
+                            <label for="timezone_radius">Radius: </label><input id="timezone_radius" name="radius" type="number" placeholder="Radius" class="form-control input-group-sm"><hr>
                     </td>
                     <td><button  id="timezone-api" class="btn btn-primary">Submit</button></td>
                 </tr>
@@ -77,7 +77,7 @@
                     <td><button  class="btn btn-primary">Submit</button></td>
                 </tr>
                 <tr>
-                    <td id="result" colspan="3" scope="row"> Results</td>
+                    <td id="result" colspan="3" scope="row">Results</td>
                 </tr>
             </tbody>
         </table>
