--- a/task/index.html
+++ b/task/index.html
@@ -32,7 +32,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="row">1. Weather Observation </td>
+                    <td scope="row">1. <span id="api_name">Weather Observation</span> </td>
                     <td>Weather Station with most recent weather observation<hr>
                             Parameters: <br>
                             Latitude, Longitude - the service will return the station closest to this given point (reverse geocoding) <br>
