--- a/task/index.html
+++ b/task/index.html
@@ -90,9 +90,18 @@
                   </form>
                 </tr>
                 <tr>
-                    <td scope="row">3. &lt;name&gt;</td>
-                    <td>&lt;description&gt;</td>
-                    <td><button  class="btn btn-primary">Submit</button></td>
+                    <form action="javascript:void(0);">
+                        <td scope="row">3. <span class="api_wiki">Wikipedia Search</span></td>
+                        <td>
+                            The Wikipedia Search API give access to georeferenced wikipedia articles in 240 languages. For the largest languages (English, German, French, Spanish, Italian, Portuguese, Polish, Russian and Chinese)<hr>
+                            Parameters: <br>
+                            Place Name<br>
+                            Title : search in the wikipedia title (optional)<br>
+                            Language -  language code, supported languages are de,en,es,fr,it,nl,pl,pt,ru,zh (default = en)<br>
+                            Max Row : maximal number of rows returned (default = 10)<hr>
+                        </td>
+                        <td><button  class="btn btn-primary">Submit</button></td>
+                    </form> 
                 </tr>
                 <tr>
                     <td id="result" colspan="3" scope="row">Results</td>
