--- a/task/index.html
+++ b/task/index.html
@@ -99,7 +99,9 @@
                             Title : search in the wikipedia title (optional)<br>
                             Language -  language code, supported languages are de,en,es,fr,it,nl,pl,pt,ru,zh (default = en)<br>
                             Max Row : maximal number of rows returned (default = 10)<hr>
-                            <label for="wiki_place">Place Name: <input list="places" id="wiki_place"  name="q" type="text"  class="form-control input-group-sm"></label>
+                            <label for="wiki_place">Place Name: <input required list="places" id="wiki_place"  name="q" type="text"  class="form-control input-group-sm"></label>
+                            <label for="wiki_title">Title: <input id="wiki_title"  name="title" type="text"  class="form-control input-group-sm"></label>
+
                         </td>
                         <td><button id="wikipedia_api"  class="btn btn-primary">Submit</button></td>
                     </form> 
