Wikipedia API language parameter
Wikipedia API language parameter : is working now, no need to disabled so we deleted that.
script and php working together well request and respond

--- a/task/index.html
+++ b/task/index.html
@@ -87,7 +87,7 @@
                             Max Row : maximal number of rows returned (default = 10)<hr>
                             <label for="wiki_place">Place Name: <input required list="places" id="wiki_place"  name="q" type="text"  class="form-control input-group-sm"></label>
                             <label for="wiki_title">Title: <input id="wiki_title"  name="title" type="text"  class="form-control input-group-sm"></label>
-                            <label for="wiki_lang">Language: <input disabled list="languages" id="wiki_lang" name="lang" placeholder="Language" type="text" class="form-control input-group-sm"></label>
+                            <label for="wiki_lang">Language: <input list="languages" id="wiki_lang" name="lang" placeholder="Language" type="text" class="form-control input-group-sm"></label>
                         </td>
                         <td>
                             <button id="wikipedia_api"  class="btn btn-primary">Submit</button>
