--- a/task/index.html
+++ b/task/index.html
@@ -17,17 +17,17 @@
 </head>
 <body>
     <!-- Header section -->
-    <header>
+    <header class="w-60 text-center my-4 p-5">
         <h1>Welcome To API Tasks From GeoNames WebServices</h1>
     </header>
     <!-- Main section -->
     <main>
-        <table class="table table-hover">
+        <table class="w-75 mx-auto table table-responsive table-dark table-hover">
             <!-- table head section -->
             <thead>
-                <tr>
+                <tr >
                     <th>API name</th>
-                    <th>API description</th>
+                    <th class="p-2">API description</th>
                     <th>&nbsp;</th>
                 </tr>
             </thead>
