style table header using bootstrap
style table header using bootstrap

--- a/task/index.html
+++ b/task/index.html
@@ -22,17 +22,17 @@
     </header>
     <!-- Main section -->
     <main>
-        <table class="w-75 mx-auto table table-responsive table-dark table-hover">
+        <table class="w-75 mx-auto table table-responsive table-dark table-hover text-center">
             <!-- table head section -->
-            <thead>
-                <tr >
-                    <th>API name</th>
-                    <th class="p-2">API description</th>
-                    <th>&nbsp;</th>
+            <thead class="display-6 text-warning">
+                <tr>
+                    <th class="p-2">API name</th>
+                    <th class="p-4">API description</th>
+                    <th></th>
                 </tr>
             </thead>
             <!-- table main body section -->
-            <tbody>
+            <tbody class="">
                 <!-- WEATHER API  -->
                 <tr>
                     <form action="javascript:void(0);">
