--- a/task/index.html
+++ b/task/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Tasks</title>
 
-    <!-- <link rel="stylesheet" href="#" rel="icon"> -->
+    <link href="favicon.ico" rel="icon">
     <!-- Adding Bootstrap 5.1.3 -->
     <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
     <!-- Adding custom stylesheet -->
@@ -127,6 +127,9 @@
         <option value="Tokyo"></option>
     </datalist>
 
+    <footer class="text-center small">
+        Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </footer>
    <!-- upload javascript files -->
    <script src="vendors/jquery/jquery.min.js"></script>
    <script src="vendors/bootstrap/bootstrap.min.js"></script>
