--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Andrius Alimas" />
-    <meta name="description" content="API Tasks" />
+    <meta name="description" content="Gazetteer App" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Gazetteer</title>
