--- a/project1/index.html
+++ b/project1/index.html
@@ -12,7 +12,7 @@
     <!-- <link href="favicon.ico" rel="icon"> -->
 
     <!-- Adding Bootstrap 5.1.3 -->
-    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../task/vendors/bootstrap/bootstrap.min.css" />
     <!-- Adding custom stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -28,8 +28,8 @@
     <div id="preloader"></div>
 
     <!-- upload javascript files -->
-    <script src="vendors/jquery/jquery.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="../task/vendors/jquery/jquery.min.js"></script>
+    <script src="../task/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
