--- a/project1/index.html
+++ b/project1/index.html
@@ -18,14 +18,18 @@
   </head>
 
   <body>
+    <!-- Preloader animation place -->
+    <div class="loading-area">
+      <span class="loader">Loading...</span>
+      <span class="load-anim1"></span>
+      <span class="load-anim2"></span>
+    </div>
+
     <!-- Nabbar -->
     <nav></nav>
 
     <!-- Main section for view map -->
     <main></main>
-
-    <!-- Preloader animation place -->
-    <div id="preloader"></div>
 
     <!-- upload javascript files -->
     <script src="../task/vendors/jquery/jquery.min.js"></script>
