--- a/project1/index.html
+++ b/project1/index.html
@@ -18,19 +18,27 @@
   </head>
 
   <body>
+    <!-- Nabbar -->
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <select class="form-select" id="countrySelect"></select>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">Cities Info</li>
+          <li class="nav-item"></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Main section for view map -->
+    <main></main>
+
     <!-- Preloader animation place -->
     <div class="loading-area">
       <span class="loader">Loading...</span>
       <span class="load-anim1"></span>
       <span class="load-anim2"></span>
     </div>
-
-    <!-- Nabbar -->
-    <nav></nav>
-
-    <!-- Main section for view map -->
-    <main></main>
-
     <!-- upload javascript files -->
     <script src="../task/vendors/jquery/jquery.min.js"></script>
     <script src="../task/vendors/bootstrap/bootstrap.min.js"></script>
