--- a/project1/index.html
+++ b/project1/index.html
@@ -38,7 +38,15 @@
               data-bs-target="#country_citiesModal"
             ></button>
           </li>
-          <li class="nav-item"></li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-wiki"
+              title="Get From Wikipedia Info"
+              data-bs-toggle="modal"
+              data-bs-target="#wikiModal"
+            ></button>
+          </li>
         </ul>
       </div>
     </nav>
