--- a/project1/index.html
+++ b/project1/index.html
@@ -28,7 +28,7 @@
       ></select>
 
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav w-100 justify-content-around">
           <li class="nav-item">
             <button
               type="button"
@@ -45,6 +45,15 @@
               title="Get From Wikipedia Info"
               data-bs-toggle="modal"
               data-bs-target="#wikiModal"
+            ></button>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-youtube mb-2"
+              title="See Video About Country"
+              data-bs-toggle="modal"
+              data-bs-target="#youtubeModal"
             ></button>
           </li>
         </ul>
