Created new navbar list item button calendar
Created new navbar list item button calendar:
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/index.html
+++ b/project1/index.html
@@ -50,10 +50,19 @@
           <li class="nav-item">
             <button
               type="button"
-              class="btn btn-youtube mb-2"
+              class="btn btn-youtube"
               title="See Video About Country"
               data-bs-toggle="modal"
               data-bs-target="#youtubeModal"
+            ></button>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-calendar"
+              title="Get Country Holidays & Day Off"
+              data-bs-toggle="modal"
+              data-bs-target="#calendarModal"
             ></button>
           </li>
         </ul>
