Created new navbar list item button weather forecast
Created new navbar list item button weather forecast:
Added new image file
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/index.html
+++ b/project1/index.html
@@ -65,6 +65,15 @@
               data-bs-target="#calendarModal"
             ></button>
           </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-weather"
+              title="Get Weather Forecast"
+              data-bs-toggle="modal"
+              data-bs-target="#weatherModal"
+            ></button>
+          </li>
         </ul>
       </div>
     </nav>
