Created new navbar list item button language
Created new navbar list item button language:
Added new image for button
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/index.html
+++ b/project1/index.html
@@ -74,6 +74,15 @@
               data-bs-target="#weatherModal"
             ></button>
           </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-language"
+              title="Get Words For This Country Language"
+              data-bs-toggle="modal"
+              data-bs-target="#languageModal"
+            ></button>
+          </li>
         </ul>
       </div>
     </nav>
