Created new navbar list item button covid
Created new navbar list item button covid:
Added new image that will be used for button
in index.html created list item button that will trigger modal
in css file added button image

--- a/project1/index.html
+++ b/project1/index.html
@@ -83,6 +83,15 @@
               data-bs-target="#languageModal"
             ></button>
           </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-covid"
+              title="Get Covid Information"
+              data-bs-toggle="modal"
+              data-bs-target="#covidModal"
+            ></button>
+          </li>
         </ul>
       </div>
     </nav>
